--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^5.14.18",
     "@mui/styled-engine-sc": "^6.0.0-alpha.6",
     "axios": "^1.6.2",
+    "firebase": "^10.7.0",
     "less": "^4.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
