--- a/package.json
+++ b/package.json
@@ -17,14 +17,13 @@
     "@mui/material": "^5.14.18",
     "@mui/styled-engine-sc": "^6.0.0-alpha.6",
     "axios": "^1.6.2",
+    "chart.js": "^4.4.0",
     "firebase": "^10.7.0",
     "less": "^4.2.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^8.1.3",
     "react-router-dom": "^6.19.0",
-    "redux-logger": "^3.0.6",
-    "redux-persist": "^6.0.0",
     "styled-components": "^6.1.1"
   },
   "devDependencies": {
