--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-photo-view": "^1.2.3",
     "react-router-dom": "^6.19.0",
     "styled-components": "^6.1.1"
   },
