--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "less": "^4.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-loader-spinner": "^6.1.0",
     "react-photo-view": "^1.2.3",
     "react-router-dom": "^6.19.0",
     "styled-components": "^6.1.1"
